Fixed CSS overlapping
Fixed CSS overlapping as mentioned in issue: https://github.com/Codeinwp/wp-product-review/issues/204 #204

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -158,6 +158,5 @@
 	display: block;
 	padding: 10px;
 	background: #cae9ff;
-	line-height: 7px;
 	text-align: center;
 }
